# hm3-sandbox

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/detours-macro/: Cargo.toml
crates/detours-macro/src/: lib.rs
crates/egui-directx/: Cargo.toml
crates/egui-directx/src/: event.rs  input.rs  lib.rs  painter.rs  win32.rs
crates/egui-directx/src/dx12/: allocated_resource.rs  back_buffer.rs  buffer.rs  descriptor_heap.rs  frame_context.rs  heap_resource.rs  mod.rs  painter_dx12.rs  texture.rs
crates/egui-directx/src/dx12/shaders/: pixel_shader.hlsl  vertex_shader.hlsl
launcher/: Cargo.toml
launcher/src/: main.rs
payload/: Cargo.toml
payload/src/: lib.rs
payload/src/detouring/: hook_library.rs  mod.rs  prelude.rs
payload/src/game/zapplication_engine_win32/: mod.rs
payload/src/game/zrender/: mod.rs
payload/src/rendering/: mod.rs  overlay.rs
src/: console.rs  lib.rs
src/detouring/: detour_binder.rs  hook_library.rs  mod.rs  module.rs  prelude.rs  thread_group.rs  thread_suspender.rs
src/game/: mod.rs
src/game/zapplication_engine_win32/: mod.rs
src/game/zrender/: mod.rs
src/rendering/: console.rs  mod.rs  overlay.rs
