[package]
name = "hm3-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "payload"
crate-type = ["cdylib"]

[features]
vscode-lldb = []
debug-console = []
debug-logging = []
default = [
    "debug-console",
    "debug-logging"
]

[dependencies]
anyhow = "1.0.52"
c_string = "0.7.2"
detour = "0.8.1"
dll-syringe = "0.2.1"
egui = "0.16.1"
lazy_static = "1.4.0"
libc = "0.2.112"
paste = "1.0.6"
patternscan = "1.2.0"
serde = "1.0.134"
steamlocate = "1.0.1"

detours-macro = { path = "crates/detours-macro"}
egui-directx = { path = "crates/egui-directx"}

[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.dev]
opt-level = 2
