[package]
name = "egui-directx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
egui = "0.16.1"
epi = "0.16.0"
winit = "0.26.1"

[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
]
